# Tedm

./: .gitignore  .travis-ci.sh  .travis.yml  CMakeLists.txt  Input.cpp  Input.h  KeyboardEvent.h  Makefile  README.md  Tutorial.md  anakin.cfg  anakin_side.cpp  collidable.cpp  collidable.hpp  doxygen_config  drawable.hpp  environment.hpp  event.hpp  game.cpp  game.hpp  gamewithloopEXAMPLE.cpp  gamewithloopEXAMPLE.h  graphics.cpp  graphics.hpp  install_deps.sh  object.hpp  player.hpp  pong.cfg  pong.cpp  sprite.hpp  state.hpp  tags  test01.cpp
demos/: anakin.cfg  anakin_side.cpp  part1.cpp  part2.cpp  part3.cpp  pong.cpp
include/: Event.h  Input.h  KeyboardEvent.h  environment.hpp  event.hpp  game.hpp  game_state.hpp  gamewithloopEXAMPLE.h  graphics.hpp  object.hpp  player.hpp  sprite.hpp  state.hpp  timer.hpp
old/: game.cpp  game.hpp  state.hpp
src/: Context.cpp  Context.h  Event.cpp  Game.cpp  Game.h  Graphics.cpp  Graphics.h  Graphics.hpp  KeyboardEvent.cpp  State.cpp  State.h  environment.cpp  game.cpp  game_state.cpp  gamewithloopEXAMPLE.cpp  graphics.cpp  timer.cpp
src/events/: Event.cpp  Event.h  EventHandler.cpp  EventHandler.h  EventListener.cpp  EventListener.h  EventTrigger.cpp  EventTrigger.h
src/img/: Texture.cpp  Texture.h
src/objects/: Surface.cpp  Surface.h  environment.cpp  environment.h  environment.hpp  object.h  object.hpp  player.h  player.hpp  sprite.h  sprite.hpp
src/utils/: Logger.cpp  Logger.h  Timer.cpp  Timer.h
